# drf_project

./: .env.sample  Dockerfile  deploy.yml  docker-compose.yaml  drf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
course/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_lessons.py  0003_subscription.py  0004_lessons_owner.py
lessons/: models.py  serializers.py  urls.py  views.py
lessons/migrations/: 0001_initial.py
users/: models.py  permissions.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_payments_stripe_session_id_payments_stripe_status_and_more.py
