[tool.poetry]
name = "drf-project"
version = "0.1.0"
description = ""
authors = ["Student <andreevdamir266@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
pytest = "^8.3.5"
stripe = "^11.6.0"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
